# Seclab

./: README.md
Var10ASSm/: main32.asm
Var10C++/: CMakeLists.txt  ChessboardMovement.cpp  SumOfDigits.cpp  WaterBottle.cpp
Var10CSharp/: Var10Cshar.sln
Var10CSharp/Var10Cshar/: ChessboardMovement.cs  Dockerfile  SumOfDigits.cs  Var10Cshar.csproj  WaterBottles.cs
Var10Go/: SumOfDigits.go  board.go  bottles.go  go.mod
Var10Haskell/: ChessboardMovement.hs
Var10JS/: ChessboardMovement.js  SumOfDigits.js  WaterBottles.js
Var10Java/src/: ChessboardMovement.java  SumOfDigits.java  WaterBottles.java
Var10Kotlin/src/: ChessboardMovement.kt  SumOfDigits.kt  WaterBottles.kt
Var10Python/: ChessboardMovement.py  SumOfDigits.py  WaterBottles.py
Var10Ruby/: chessboard_movement.rb  sum_of_digits.rb  water_bottles.rb
Var10Rust/: Cargo.toml
Var10Rust/src/: ChessboardMovement.rs  SumOfDigits.rs  WaterBottles.rs
Var10Swift/ChessoardMovement/: Package.swift
Var10Swift/ChessoardMovement/Sources/: main.swift
Var10Swift/SumOfDigit/: Package.swift
Var10Swift/SumOfDigit/Sources/: main.swift
Var10Swift/WaterBottles/: Package.swift
Var10Swift/WaterBottles/Sources/: main.swift
