[package]
name = "Var10Rust"
version = "0.1.0"
edition = "2021"
authors = ["Egor <egorich.mih05@gmail.com>"]

[[bin]]
name = "Var10Rust"
#path = "src/ChessboardMovement.rs"
#path = "src/WaterBottles.rs"
path = "src/SumOfDigits.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
